fix: incorrect overlapping ranges

--- a/src/packages/calendar/CalendarTimeRange.scss
+++ b/src/packages/calendar/CalendarTimeRange.scss
@@ -12,7 +12,6 @@
 
   &--extra {
     background-color: var(--yellow-500);
-    max-width: 80%;
     left: 10%;
     z-index: 10;
   }
